--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
             android:layout_marginTop="@dimen/common_margin_min"
-            android:text="@string/my_list"
+            android:text="@string/bookmark"
             android:gravity="center"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
