--- a/app/src/main/res/menu/button_menu.xml
+++ b/app/src/main/res/menu/button_menu.xml
@@ -7,7 +7,7 @@
 
     <item android:id="@+id/nav_gallery"
         android:title="@string/gallery"
-        android:icon="@drawable/ic_upcoming"/>
+        android:icon="@drawable/ic_gallery"/>
 
     <item android:id="@+id/nav_bookmark"
         android:title="@string/bookmark"
