refactoring menu options

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,14 +19,14 @@
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/nav_gallery"
-            app:destination="@id/galleryFragment"
+            app:destination="@id/nav_gallery"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/nav_bookmark"
-            app:destination="@id/bookmarkFragment"
+            app:destination="@id/nav_bookmark"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -64,7 +64,7 @@
             app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/galleryFragment"
+        android:id="@+id/nav_gallery"
         android:name="com.moviemain.ui.view.fragments.GalleryFragment"
         android:label="@string/upcoming"
         tools:layout="@layout/fragment_gallery" >
@@ -77,7 +77,7 @@
             app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
-        android:id="@+id/bookmarkFragment"
+        android:id="@+id/nav_bookmark"
         android:name="com.moviemain.ui.view.fragments.BookmarkFragment"
         android:label="@string/bookmark"
         tools:layout="@layout/fragment_bookmark"/>
