rename btn navigation menu

--- a/app/src/main/res/values-es-rAR/values.xml
+++ b/app/src/main/res/values-es-rAR/values.xml
@@ -20,6 +20,6 @@
     <string name="search">Buscar</string>
     <string name="ok">OK</string>
     <string name="try_again">Intentar otra vez</string>
-    <string name="gallery">Galeria</string>
+    <string name="gallery">Próximamente</string>
     <string name="movie_item">Movie_item</string>
 </resources>
