refactoring menu and paging

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/nav_home"
+    <item android:id="@+id/menu_home"
         android:title="@string/home"
         android:icon="@drawable/ic_home"/>
 
-    <item android:id="@+id/nav_gallery"
+    <item android:id="@+id/menu_gallery"
         android:title="@string/gallery"
         android:icon="@drawable/ic_gallery"/>
 
-    <item android:id="@+id/nav_bookmark"
+    <item android:id="@+id/menu_bookmark"
         android:title="@string/bookmark"
         android:icon="@drawable/ic_bookmark_added"/>
 
