--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -43,18 +43,22 @@
             app:layout_constraintEnd_toStartOf="@+id/linearLayout"
             app:layout_constraintStart_toEndOf="@+id/linearLayout3"
             app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-            tools:ignore="UseCompoundDrawables">
+            tools:ignore="UnknownId,UseCompoundDrawables">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/favourite"
-                android:src="@drawable/ic_favorite_border" />
+            <CheckBox
+                android:id="@+id/checkbox_bookmark"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:contentDescription="@string/bookmark"
+                android:button="@drawable/ic_bookmark_border"
+                android:scaleX="1.2"
+                android:scaleY="1.2"
+                app:useMaterialThemeColors="false" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/favourite"
+                android:text="@string/bookmark"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -64,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin_min"
-            android:layout_marginEnd="@dimen/common_margin_default"
+            android:layout_marginEnd="@dimen/common_margin_max"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +76,7 @@
             tools:ignore="UseCompoundDrawables">
 
             <ImageView
+                android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/share"
@@ -85,6 +90,7 @@
 
         </LinearLayout>
 
+<!--
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="wrap_content"
@@ -100,16 +106,17 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/bookmark"
-                android:src="@drawable/ic_bookmark_border" />
+                android:contentDescription="@string/favourite"
+                android:src="@drawable/ic_favorite_border" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/bookmark"
+                android:text="@string/favourite"
                 android:textColor="@color/white" />
 
         </LinearLayout>
+-->
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
