--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,77 +50,89 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/title_popular"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_movies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_margin_default"
-            android:fontFamily="@font/poppins_regular"
-            android:text="@string/popular"
-            android:textColor="@color/yellow"
-            android:textSize="@dimen/common_size_default"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_carousel" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_movies_popular"
-            android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_marginTop="@dimen/common_margin_header"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/title_popular" />
-
-        <TextView
-            android:id="@+id/title_top_rated"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_margin_default"
-            android:fontFamily="@font/poppins_regular"
-            android:text="@string/top_rated"
-            android:textColor="@color/yellow"
-            android:textSize="@dimen/common_size_default"
-            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/img_carousel"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rv_movies_popular" />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_movies_top_rated"
-            android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_marginTop="@dimen/common_margin_header"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/title_top_rated"
-            tools:layout_editor_absoluteX="16dp" />
 
-        <TextView
-            android:id="@+id/title_now_playing"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_margin_default"
-            android:fontFamily="@font/poppins_regular"
-            android:text="@string/now_playing"
-            android:textColor="@color/yellow"
-            android:textSize="@dimen/common_size_default"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rv_movies_top_rated" />
+        <!--        <TextView-->
+<!--            android:id="@+id/title_popular"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="@dimen/common_margin_min"-->
+<!--            android:layout_marginTop="@dimen/common_margin_default"-->
+<!--            android:fontFamily="@font/poppins_regular"-->
+<!--            android:text="@string/popular"-->
+<!--            android:textColor="@color/yellow"-->
+<!--            android:textSize="@dimen/common_size_default"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/img_carousel" />-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_movies_now_playing"
-            android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_marginTop="@dimen/common_margin_header"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/title_now_playing"
-            tools:layout_editor_absoluteX="16dp"
-            android:layout_marginBottom="@dimen/common_margin_middle"/>
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rv_movies_popular"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="170dp"-->
+<!--            android:layout_marginTop="@dimen/common_margin_header"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/title_popular" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/title_top_rated"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="@dimen/common_margin_min"-->
+<!--            android:layout_marginTop="@dimen/common_margin_default"-->
+<!--            android:fontFamily="@font/poppins_regular"-->
+<!--            android:text="@string/top_rated"-->
+<!--            android:textColor="@color/yellow"-->
+<!--            android:textSize="@dimen/common_size_default"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/rv_movies_popular" />-->
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rv_movies_top_rated"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="170dp"-->
+<!--            android:layout_marginTop="@dimen/common_margin_header"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/title_top_rated"-->
+<!--            tools:layout_editor_absoluteX="16dp" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/title_now_playing"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="@dimen/common_margin_min"-->
+<!--            android:layout_marginTop="@dimen/common_margin_default"-->
+<!--            android:fontFamily="@font/poppins_regular"-->
+<!--            android:text="@string/now_playing"-->
+<!--            android:textColor="@color/yellow"-->
+<!--            android:textSize="@dimen/common_size_default"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/rv_movies_top_rated" />-->
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rv_movies_now_playing"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="170dp"-->
+<!--            android:layout_marginTop="@dimen/common_margin_header"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/title_now_playing"-->
+<!--            tools:layout_editor_absoluteX="16dp"-->
+<!--            android:layout_marginBottom="@dimen/common_margin_middle"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
