--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:background="@color/black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container_popular"
+        android:id="@+id/container_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
