--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -45,8 +45,8 @@
             app:layout_constraintTop_toBottomOf="@+id/frameLayout"
             tools:ignore="UnknownId,UseCompoundDrawables">
 
-            <CheckBox
-                android:id="@+id/checkbox_bookmark"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_bookmark"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:contentDescription="@string/bookmark"
