--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -42,6 +42,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <include
+            android:id="@+id/empty_container"
+            android:visibility="gone"
+            layout="@layout/empty_container"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_movies_bookmark"
             android:layout_width="match_parent"
