--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,5 +80,9 @@
         android:id="@+id/menu_bookmark"
         android:name="com.moviemain.ui.view.fragments.BookmarkFragment"
         android:label="@string/bookmark"
-        tools:layout="@layout/fragment_bookmark"/>
+        tools:layout="@layout/fragment_bookmark">
+        <action
+            android:id="@+id/action_menu_bookmark_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
 </navigation>
