--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,8 @@
     <dimen name="common_corner_min">8dp</dimen>
     <dimen name="common_corner_default">16dp</dimen>
     <dimen name="home_image_size">80dp</dimen>
+    <dimen name="error_image_size">50dp</dimen>
+    <dimen name="text_size_normal">20sp</dimen>
 
 
 </resources>
