--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -47,13 +47,9 @@
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_bookmark"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:contentDescription="@string/bookmark"
-                android:button="@drawable/ic_bookmark_border"
-                android:scaleX="1.2"
-                android:scaleY="1.2"
-                app:useMaterialThemeColors="false" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/bookmark" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -165,14 +161,14 @@
             android:id="@+id/txt_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_details"
+            android:layout_marginTop="@dimen/common_margin_min"
             android:drawablePadding="@dimen/common_padding_min"
             android:gravity="center"
             android:textColor="@color/green_met"
             app:drawableStartCompat="@drawable/ic_star_border"
             app:drawableTint="@color/green_met"
             app:layout_constraintStart_toStartOf="@+id/txt_released"
-            app:layout_constraintTop_toBottomOf="@id/frameLayout"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
             tools:text="8.5 (5854 Reviews)" />
 
 
