fixed items favorites movies

--- a/app/src/main/res/layout/favorites_row.xml
+++ b/app/src/main/res/layout/favorites_row.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/common_margin_default"
     android:layout_marginVertical="@dimen/common_margin_min"
-    android:padding="@dimen/common_padding_min"
     app:cardCornerRadius="@dimen/common_corner_default"
-    app:cardElevation="@dimen/common_corner_min">
+    app:cardElevation="@dimen/common_corner_min"
+    android:backgroundTint="@color/black_dense">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:id="@+id/mcv_cocktail"
             android:layout_width="100dp"
             android:layout_height="130dp"
-            android:layout_margin="@dimen/common_margin_default"
+            android:layout_margin="@dimen/common_margin_min"
             app:cardCornerRadius="@dimen/common_corner_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_default"
             android:maxLines="3"
-            android:textSize="@dimen/common_size_default"
+            android:textSize="@dimen/common_size_detail_movie"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="@id/mcv_cocktail"
