--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -49,7 +49,11 @@
                 android:id="@+id/fab_bookmark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/bookmark" />
+                android:contentDescription="@string/bookmark"
+                android:backgroundTint="@color/white"
+                android:src="@drawable/ic_add"
+                app:rippleColor="@color/grey_light"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
