--- a/app/src/main/res/layout/movie_item_bookmark.xml
+++ b/app/src/main/res/layout/movie_item_bookmark.xml
@@ -1,59 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:backgroundTint="@color/black">
+    android:layout_marginHorizontal="@dimen/common_margin_default"
+    android:layout_marginVertical="@dimen/common_margin_min"
+    app:cardCornerRadius="@dimen/common_corner_default"
+    app:cardElevation="@dimen/common_corner_min"
+    android:backgroundTint="@color/black_dense">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/common_padding_min">
+        android:layout_height="match_parent">
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_img_movie"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/common_margin_min"
-            android:layout_marginVertical="@dimen/common_margin_item_movie"
-            android:clipToPadding="true"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/mcv_cocktail"
+            android:layout_width="100dp"
+            android:layout_height="130dp"
+            android:layout_margin="@dimen/common_margin_min"
             app:cardCornerRadius="@dimen/common_corner_default"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/img_movie"
-                android:layout_width="120dp"
-                android:layout_height="180dp"
-                android:scaleType="centerCrop"
+                android:id="@+id/img_cocktail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@mipmap/ic_launcher"
-                android:contentDescription="@string/bookmark"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:ignore="ContentDescription" />
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
-            android:id="@+id/tv_movie_title"
+            android:id="@+id/txt_titulo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_default"
-            android:layout_marginTop="@dimen/common_margin_default"
-            android:text="@string/movie_title"
+            android:maxLines="3"
+            android:textSize="@dimen/common_size_detail_movie"
             android:textColor="@color/white"
-            android:textSize="@dimen/common_size_default"
-            android:maxLines="5"
+            android:textStyle="bold"
             android:ellipsize="end"
+            app:layout_constraintBottom_toBottomOf="@id/mcv_cocktail"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/cv_img_movie"
-            app:layout_constraintTop_toTopOf="@id/cv_img_movie"
-            app:layout_constraintBottom_toBottomOf="@id/cv_img_movie"/>
+            app:layout_constraintStart_toEndOf="@+id/mcv_cocktail"
+            app:layout_constraintTop_toTopOf="@+id/mcv_cocktail"
+            tools:text="Peli Cool App" />
+
+       - />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
-
+</com.google.android.material.card.MaterialCardView>
