--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -53,12 +53,14 @@
                 android:backgroundTint="@color/white"
                 android:src="@drawable/ic_add"
                 app:rippleColor="@color/grey_light"
-                />
+                android:scaleY="0.8"
+                android:scaleX="0.8"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/bookmark"
+                android:textSize="@dimen/common_size_detail_attributes"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -68,24 +70,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin_min"
-            android:layout_marginEnd="@dimen/common_margin_max"
+            android:layout_marginEnd="@dimen/common_margin_default"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/frameLayout"
             tools:ignore="UseCompoundDrawables">
 
-            <ImageView
-                android:id="@+id/share"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/share"
-                android:src="@drawable/ic_share" />
+                android:backgroundTint="@color/white"
+                android:src="@drawable/ic_share"
+                app:rippleColor="@color/grey_light"
+                android:scaleY="0.8"
+                android:scaleX="0.8"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/share"
+                android:textSize="@dimen/common_size_detail_attributes"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -168,6 +175,7 @@
             android:layout_marginTop="@dimen/common_margin_min"
             android:drawablePadding="@dimen/common_padding_min"
             android:gravity="center"
+            android:textSize="@dimen/common_size_detail_attributes"
             android:textColor="@color/green_met"
             app:drawableStartCompat="@drawable/ic_star_border"
             app:drawableTint="@color/green_met"
@@ -183,6 +191,7 @@
             android:layout_marginTop="@dimen/common_margin_min"
             android:drawablePadding="@dimen/common_padding_min"
             android:gravity="center"
+            android:textSize="@dimen/common_size_detail_attributes"
             android:textColor="@color/green_met"
             app:drawableStartCompat="@drawable/ic_calendar_month"
             app:drawableTint="@color/green_met"
@@ -198,6 +207,7 @@
             android:layout_marginTop="@dimen/common_margin_min"
             android:drawablePadding="@dimen/common_padding_min"
             android:gravity="center"
+            android:textSize="@dimen/common_size_detail_attributes"
             android:textColor="@color/green_met"
             app:drawableStartCompat="@drawable/ic_language"
             app:drawableTint="@color/green_met"
