--- a/app/src/main/res/layout/now_playing_movie_row.xml
+++ b/app/src/main/res/layout/now_playing_movie_row.xml
@@ -21,6 +21,6 @@
         android:layout_height="160dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/movie_item"/>
+        tools:listitem="@layout/movie_item_row"/>
 
 </LinearLayout>
