--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,8 +13,8 @@
         android:title="@string/bookmark"
         android:icon="@drawable/ic_bookmark_added"/>
 
-<!--    <item android:id="@+id/nav_search"
+    <item android:id="@+id/menu_search"
         android:title="@string/search"
-        android:icon="@drawable/ic_search"/>-->
+        android:icon="@drawable/ic_search"/>
 
 </menu>
