--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="home_image_size">80dp</dimen>
     <dimen name="error_image_size">50dp</dimen>
     <dimen name="text_size_normal">20sp</dimen>
+    <dimen name="search_view_radius">20dp</dimen>
 
 
 </resources>
