--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -59,9 +59,7 @@
                 android:background="@color/yellow"
                 android:iconifiedByDefault="false"
                 android:imeOptions="actionDone|flagNoExtractUi"
-                android:queryHint="Search cocktail"
-                android:searchHintIcon="@null"
-                android:searchIcon="@null" />
+                app:queryHint="@string/helper_search" />
 
         </com.google.android.material.card.MaterialCardView>
 
