--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -52,7 +52,7 @@
                 android:contentDescription="@string/bookmark"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/ic_add"
-                app:rippleColor="@color/grey_light"
+                app:rippleColor="@color/green_met"
                 android:scaleY="0.8"
                 android:scaleX="0.8"/>
 
@@ -84,7 +84,7 @@
                 android:contentDescription="@string/share"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/ic_share"
-                app:rippleColor="@color/grey_light"
+                app:rippleColor="@color/green_met"
                 android:scaleY="0.8"
                 android:scaleX="0.8"/>
 
