refactored paging data to repository, added toast in on/off favorite, added constants, and fixed delete bookmark

--- a/app/src/main/res/values-es-rAR/values.xml
+++ b/app/src/main/res/values-es-rAR/values.xml
@@ -30,4 +30,7 @@
 
     <string name="peli_cool_app">Peli Cool App</string>
     <string name="logo_splash">Logo splash</string>
+
+    <string name="removed_movie">Se eliminó de MI LISTA</string>
+    <string name="added_movie">Agregada a MI LISTA</string>
 </resources>
