--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="common_margin_item_movie">4dp</dimen>
     <dimen name="common_margin_min">8dp</dimen>
     <dimen name="common_margin_default">16dp</dimen>
+    <dimen name="common_margin_24">24dp</dimen>
     <dimen name="common_margin_middle">32dp</dimen>
     <dimen name="common_margin_max">64dp</dimen>
     <dimen name="common_margin_details">80dp</dimen>
