--- a/app/src/main/res/layout/row_top_rated_movie.xml
+++ b/app/src/main/res/layout/row_top_rated_movie.xml
@@ -21,6 +21,6 @@
         android:layout_height="160dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/movie_item_row"/>
+        tools:listitem="@layout/item_movie_row"/>
 
 </LinearLayout>
