fixed shared media store

--- a/app/src/main/res/layout/item_movie_bookmark.xml
+++ b/app/src/main/res/layout/item_movie_bookmark.xml
@@ -27,7 +27,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
-            android:contentDescription="@string/gallery"/>
+            android:contentDescription="@string/bookmark"/>
 
     </androidx.cardview.widget.CardView>
 
