--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
 
 
 
-    <color name="rojo_theme">#ED190C</color>
+    <color name="red_theme">#ED190C</color>
     <color name="pink_theme">#FA3EDF</color>
     <color name="purple_theme">#7000E0</color>
     <color name="blue_dark_theme">#5F6BFA</color>
